<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    >

    <ImageView
        android:id="@+id/pin"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/three_count_button"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text=""
        android:background="@android:color/transparent"
        app:layout_constraintRight_toRightOf="@+id/pin"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/pin"
        app:layout_constraintBottom_toBottomOf="@+id/pin"
        android:layout_marginBottom="34dp"
        app:layout_constraintHorizontal_bias="0.506"
        android:layout_marginRight="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp" />
    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager_three_dart"
        android:layout_width="100dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toTopOf="@+id/pin"
        app:layout_constraintTop_toBottomOf="@+id/pin"
        app:layout_constraintRight_toLeftOf="@+id/pin"
        app:layout_constraintLeft_toRightOf="@+id/pin">
    </android.support.v4.view.ViewPager>

    <Button
        android:id="@+id/increment_three"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/round_button"
        android:text="@string/_3"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.377"
        app:layout_constraintTop_toBottomOf="@+id/pin"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/plus_ten"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="@string/_plus_ten"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin"
        app:layout_constraintVertical_bias="0.026"
        app:layout_constraintHorizontal_bias="0.806" />
    <Button
        android:id="@+id/minus_ten"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/round_button"
        android:text="@string/_minus_ten"
        android:textColor="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/plus_ten"
        app:layout_constraintVertical_bias="0.51" />


    <ImageButton
        android:id="@+id/button_menu"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:src="@drawable/menu_icon"
        android:layout_marginStart="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.026"
        app:layout_constraintTop_toBottomOf="@+id/pin"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="55dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />
    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:onClick="onBackButtonClick"
        android:src="@drawable/back_image_button_back"
        android:layout_marginStart="55dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_menu" />

</android.support.constraint.ConstraintLayout>