<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    >

    <ImageView
        android:id="@+id/pin"
        android:layout_width="@dimen/score_two_pin_width"
        android:layout_height="@dimen/score_two_pin_height"
        android:src="@drawable/pin_60s"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/score_two_pin_margin_top" />
    <Button
        android:id="@+id/two_count_button"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:text="0"
        android:textSize="@dimen/score_indicator"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@+id/pin"
        android:layout_marginTop="@dimen/score_two_count_indicactor_two_margin_top"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/pager_two_dart"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/pager_two_dart" />
    <Button
        android:id="@+id/three_count_button"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:text="0"
        android:textSize="@dimen/score_indicator"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/pin"
        android:layout_marginBottom="@dimen/score_two_count_indicactor_three_margin_bottom"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/pager_one_dart"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/pager_two_dart"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/pager_two_dart" />
    <!--<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:id="@+id/pager_two_dart"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="110dp"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/pin"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/pin"-->
        <!--app:layout_constraintRight_toLeftOf="@+id/pin"-->
        <!--app:layout_constraintLeft_toRightOf="@+id/pin">-->
    <!--</android.support.v4.view.ViewPager>-->
    <org.malcdevelop.cyclicview.CyclicView
        android:id="@+id/pager_two_dart"
        android:layout_width="170dp"
        android:layout_height="190dp"
        app:layout_constraintBottom_toTopOf="@+id/pin"
        app:layout_constraintTop_toBottomOf="@+id/pin"
        app:layout_constraintRight_toLeftOf="@+id/pin"
        app:layout_constraintLeft_toRightOf="@+id/pin">
    </org.malcdevelop.cyclicview.CyclicView>
    <Button
        android:id="@+id/increment_two"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/score_circle_button_width"
        android:layout_height="@dimen/score_circle_button_height"
        android:background="@drawable/round_button"
        android:text="@string/_2"
        android:textSize="@dimen/increment_number_text_size"
        android:textColor="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/pin"
        app:layout_constraintVertical_bias="0.099" />
    <Button
        android:id="@+id/increment_three"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/score_circle_button_width"
        android:layout_height="@dimen/score_circle_button_height"
        android:background="@drawable/round_button"
        android:text="@string/_3"
        android:textSize="@dimen/increment_number_text_size"
        android:textColor="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/increment_two"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/plus_ten"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/score_circle_button_width"
        android:layout_height="@dimen/score_circle_button_height"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_button"
        android:text="@string/_plus_ten"
        android:textSize="@dimen/move_ten_text_size"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintTop_toTopOf="@+id/increment_two"
        android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="0.0" />
    <Button
        android:id="@+id/minus_ten"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/score_circle_button_width"
        android:layout_height="@dimen/score_circle_button_height"
        android:background="@drawable/round_button"
        android:text="@string/_minus_ten"
        android:textSize="@dimen/move_ten_text_size"
        android:textColor="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintTop_toTopOf="@+id/increment_three" />


    <ImageButton
        android:id="@+id/button_menu"
        android:layout_width="@dimen/score_circle_button_width"
        android:layout_height="@dimen/score_circle_button_height"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:src="@drawable/menu_icon"
        android:layout_marginStart="55dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@+id/increment_two"
        android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="0.0" />
    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="@dimen/score_circle_button_width"
        android:layout_height="@dimen/score_circle_button_height"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:onClick="onBackButtonClick"
        android:src="@drawable/back_icon"
        android:layout_marginStart="55dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@+id/increment_three" />

</android.support.constraint.ConstraintLayout>