<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    >

    <ImageView
        android:id="@+id/pin"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    <ImageView
        android:id="@+id/indicator1001"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@drawable/pin_count_indicator_white"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/pin"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/pin"
        app:layout_constraintTop_toTopOf="@+id/pin"
        android:layout_marginTop="2.5dp" />

    <ImageView
        android:id="@+id/indicator1002"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="14.2dp"
        android:layout_marginTop="24.5dp"
        android:background="@drawable/pin_count_indicator_white"
        app:layout_constraintLeft_toLeftOf="@+id/pin"
        app:layout_constraintRight_toRightOf="@+id/pin"
        app:layout_constraintTop_toTopOf="@+id/pin"
        app:layout_constraintHorizontal_bias="0.831" />
    <ImageView
        android:id="@+id/indicator1003"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8.3dp"
        android:layout_marginTop="81.5dp"
        android:background="@drawable/pin_count_indicator_white"
        app:layout_constraintLeft_toLeftOf="@+id/pin"
        app:layout_constraintRight_toRightOf="@+id/pin"
        app:layout_constraintTop_toTopOf="@+id/pin"
        app:layout_constraintHorizontal_bias="1.0" />
    <ImageView
        android:id="@+id/indicator1004"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8.3dp"
        android:layout_marginTop="152.5dp"
        android:background="@drawable/pin_count_indicator_white"
        app:layout_constraintLeft_toLeftOf="@+id/pin"
        app:layout_constraintRight_toRightOf="@+id/pin"
        app:layout_constraintTop_toTopOf="@+id/pin"
        app:layout_constraintHorizontal_bias="1.0" />
    <ImageView
        android:id="@+id/indicator1005"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="13.7dp"
        android:layout_marginTop="210dp"
        android:background="@drawable/pin_count_indicator_white"
        app:layout_constraintLeft_toLeftOf="@+id/pin"
        app:layout_constraintRight_toRightOf="@+id/pin"
        app:layout_constraintTop_toTopOf="@+id/pin"
        app:layout_constraintHorizontal_bias="0.83" />
    <ImageView
        android:id="@+id/indicator1006"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@drawable/pin_count_indicator_white"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/pin"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/pin"
        app:layout_constraintTop_toTopOf="@+id/pin"
        android:layout_marginTop="232dp" />


    <ImageView
    android:id="@+id/indicator1007"
    android:layout_width="15dp"
    android:layout_height="15dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="176dp"
    android:layout_marginTop="210dp"
    android:background="@drawable/pin_count_indicator_white"
    app:layout_constraintLeft_toLeftOf="@+id/pin"
    app:layout_constraintRight_toRightOf="@+id/pin"
    app:layout_constraintTop_toTopOf="@+id/pin"
    app:layout_constraintHorizontal_bias="0.83" />
    <ImageView
        android:id="@+id/indicator1008"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="226.5dp"
        android:layout_marginTop="152.5dp"
        android:background="@drawable/pin_count_indicator_white"
        app:layout_constraintLeft_toLeftOf="@+id/pin"
        app:layout_constraintRight_toRightOf="@+id/pin"
        app:layout_constraintTop_toTopOf="@+id/pin"
        app:layout_constraintHorizontal_bias="1.0" />
    <ImageView
        android:id="@+id/indicator1009"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="226.5dp"
        android:layout_marginTop="81.5dp"
        android:background="@drawable/pin_count_indicator_white"
        app:layout_constraintLeft_toLeftOf="@+id/pin"
        app:layout_constraintRight_toRightOf="@+id/pin"
        app:layout_constraintTop_toTopOf="@+id/pin"
        app:layout_constraintHorizontal_bias="1.0" />
    <ImageView
        android:id="@+id/indicator10010"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="176dp"
        android:layout_marginTop="24.5dp"
        android:background="@drawable/pin_count_indicator_white"
        app:layout_constraintLeft_toLeftOf="@+id/pin"
        app:layout_constraintRight_toRightOf="@+id/pin"
        app:layout_constraintTop_toTopOf="@+id/pin"
        app:layout_constraintHorizontal_bias="0.831" />


    <!--<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:id="@+id/pager_hundred_dart"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="110dp"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/pin"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/pin"-->
        <!--app:layout_constraintRight_toLeftOf="@+id/pin"-->
        <!--app:layout_constraintLeft_toRightOf="@+id/pin">-->
    <!--</android.support.v4.view.ViewPager>-->
    <org.malcdevelop.cyclicview.CyclicView
        android:id="@+id/pager_hundred_dart"
        android:layout_width="170dp"
        android:layout_height="190dp"
        app:layout_constraintBottom_toTopOf="@+id/pin"
        app:layout_constraintTop_toBottomOf="@+id/pin"
        app:layout_constraintRight_toLeftOf="@+id/pin"
        app:layout_constraintLeft_toRightOf="@+id/pin">
    </org.malcdevelop.cyclicview.CyclicView>


    <Button
        android:id="@+id/count_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:text=""
        android:background="@android:color/transparent"
        app:layout_constraintRight_toRightOf="@+id/pin"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/pin"
        app:layout_constraintBottom_toBottomOf="@+id/pin"
        android:layout_marginBottom="28dp"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="@+id/pager_hundred_dart"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.98" />


    <Button
        android:id="@+id/increment_100plus"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/score_circle_button_width"
        android:layout_height="@dimen/score_circle_button_height"
        android:background="@drawable/round_button"
        android:text="@string/_100"
        android:textSize="@dimen/increment_number_text_size"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.779"
        app:layout_constraintTop_toBottomOf="@+id/pin"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.016" />

    <Button
        android:id="@+id/increment_140plus"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/score_circle_button_width"
        android:layout_height="@dimen/score_circle_button_height"
        android:background="@drawable/round_button"
        android:text="@string/_140"
        android:textSize="@dimen/increment_number_text_size"
        android:textColor="@android:color/background_light"
        app:layout_constraintHorizontal_bias="0.779"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/increment_100plus" />

    <Button
        android:id="@+id/increment_180plus"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/score_circle_button_width"
        android:layout_height="@dimen/score_circle_button_height"
        android:background="@drawable/round_button"
        android:text="@string/_180"
        android:textSize="@dimen/increment_number_text_size"
        android:textColor="@android:color/background_light"
        app:layout_constraintHorizontal_bias="0.779"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/increment_140plus"
        app:layout_constraintVertical_bias="0.0" />
    <ImageButton
        android:id="@+id/button_menu"
        android:layout_width="@dimen/score_circle_button_width"
        android:layout_height="@dimen/score_circle_button_height"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:src="@drawable/menu_icon"
        android:layout_marginStart="55dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.016"
        android:layout_marginLeft="55dp"
        app:layout_constraintTop_toBottomOf="@+id/pin"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.049" />

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="@dimen/score_circle_button_width"
        android:layout_height="@dimen/score_circle_button_height"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:onClick="onBackButtonClick"
        android:src="@drawable/undo_button"
        android:layout_marginStart="55dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="55dp"
        app:layout_constraintTop_toBottomOf="@+id/button_menu"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.049" />

    <ImageButton
        android:id="@+id/stats_button"
        android:layout_width="@dimen/score_circle_button_width"
        android:layout_height="@dimen/score_circle_button_height"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:src="@drawable/graph_icon"
        android:textColor="#fff"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_back"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>